added selenium dependency

--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,11 @@
   <groupId>test-clone</groupId>
   <artifactId>test-clone</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <dependencies>
+  <dependency>
+    <groupId>org.seleniumhq.selenium</groupId>
+    <artifactId>selenium-java</artifactId>
+    <version>4.27.0</version>
+</dependency>
+  </dependencies>
 </project>
