--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,12 @@
   <groupId>test-clone</groupId>
   <artifactId>test-clone</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <dependencies>
+  <dependency>
+    <groupId>org.testng</groupId>
+    <artifactId>testng</artifactId>
+    <version>7.10.2</version>
+    <scope>test</scope>
+</dependency>
+  </dependencies>
 </project>
