--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,7 @@
   <artifactId>test-clone</artifactId>
   <version>0.0.1-SNAPSHOT</version>
     <dependencies>
+    <!-- testng dependency-->
   <dependency>
     <groupId>org.testng</groupId>
     <artifactId>testng</artifactId>
