--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <version>7.10.2</version>
     <scope>test</scope>
 </dependency>
-
+   <!-- selenium java dependency-->
   <dependency>
     <groupId>org.seleniumhq.selenium</groupId>
     <artifactId>selenium-java</artifactId>
