--- a/pom.xml
+++ b/pom.xml
@@ -17,5 +17,11 @@
     <artifactId>selenium-java</artifactId>
     <version>4.27.0</version>
 </dependency>
+<dependency>
+    <groupId>junit</groupId>
+    <artifactId>junit</artifactId>
+    <version>4.13.2</version>
+    <scope>test</scope>
+</dependency>
   </dependencies>
 </project>
